style button test

--- a/src/MarvelFlow/MarvelFlow.App/App.config
+++ b/src/MarvelFlow/MarvelFlow.App/App.config
@@ -2,9 +2,9 @@
 <configuration>
   <appSettings>
     <add key="jsonPathHero" value="C:\Users\User\Documents\GIT\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\Hero.json" />
-    <add key="jsonPathFilm" value="C:\Users\User\Documents\GIT\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\Film.json" />
+    <add key="jsonPathFilm" value="C:\Users\User\Documents\GIT\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\\Film.json" />
     <add key="jsonPathSerie" value="C:\Users\User\Documents\GIT\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\Serie.json" />
-    <add key="AffichePath" value="pack://application:,,,/MarvelFlow.App;component/Images/" />
+    <add key="AffichePath" value="C:\Users\User\Documents\GIT\marvelflow\src\MarvelFlow\MarvelFlow.App\Images\" />
     <add key="TeaserPath" value="C:\Users\User\Documents\GIT\marvelflow\src\MarvelFlow\MarvelFlow.App\Component\Teaser\" />
   </appSettings>
     <startup> 
