save json + test + eceptionhandler and security check TODO: exception handler in init Manager

--- a/src/MarvelFlow/MarvelFlow.App/App.config
+++ b/src/MarvelFlow/MarvelFlow.App/App.config
@@ -1,11 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="jsonPathHero" value="C:\Users\User\Documents\GIT\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\Hero.json" />
-    <add key="jsonPathFilm" value="C:\Users\User\Documents\GIT\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\Film.json" />
-    <add key="jsonPathSerie" value="C:\Users\User\Documents\GIT\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\Serie.json" />
-    <add key="AffichePath" value="pack://application:,,,/MarvelFlow.App;component/Images/" />
-    <add key="TeaserPath" value="C:\Users\User\Documents\GIT\marvelflow\src\MarvelFlow\MarvelFlow.App\Component\Teaser\" />
+    <add key="jsonPathHero" value="C:\Users\lbell\Desktop\DEVELOPEMENT\C#\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\Hero.json" />
+    <add key="jsonPathFilm" value="C:\Users\lbell\Desktop\DEVELOPEMENT\C#\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\Film.json" />
+    <add key="jsonPathSerie" value="C:\Users\lbell\Desktop\DEVELOPEMENT\C#\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\Serie.json" />
+    <add key="jsonPathHeroSave" value="C:\Users\lbell\Desktop\DEVELOPEMENT\C#\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\HeroSave.json" />
+    <add key="jsonPathFilmSave" value="C:\Users\lbell\Desktop\DEVELOPEMENT\C#\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\FilmSave.json" />
+    <add key="jsonPathSerieSave" value="C:\Users\lbell\Desktop\DEVELOPEMENT\C#\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\SerieSave.json" />
+    <add key="AffichePath" value="C:\Users\lbell\Desktop\DEVELOPEMENT\C#\marvelflow\src\MarvelFlow\MarvelFlow.App\Images\" />
+    <add key="TeaserPath" value="C:\Users\lbell\Desktop\DEVELOPEMENT\C#\marvelflow\src\MarvelFlow\MarvelFlow.App\Component\" />
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
