--- a/src/MarvelFlow/MarvelFlow.Test/App.config
+++ b/src/MarvelFlow/MarvelFlow.Test/App.config
@@ -1,10 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="jsonPathHero" value="C:\Users\lbell\Desktop\DEVELOPEMENT\C#\marvelflow\src\MarvelFlow\MarvelFlow.Test\DBLocal\Hero.json" />
-    <add key="jsonPathFilm" value="C:\Users\lbell\Desktop\DEVELOPEMENT\C#\marvelflow\src\MarvelFlow\MarvelFlow.Test\DBLocal\Film.json" />
-    <add key="jsonPathSerie" value="C:\Users\lbell\Desktop\DEVELOPEMENT\C#\marvelflow\src\MarvelFlow\MarvelFlow.Test\DBLocal\Serie.json" />
+    <add key="jsonPathHero" value="C:\Users\lbell\Desktop\DEVELOPEMENT\C#\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\Hero.json" />
+    <add key="jsonPathFilm" value="C:\Users\lbell\Desktop\DEVELOPEMENT\C#\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\Film.json" />
+    <add key="jsonPathSerie" value="C:\Users\lbell\Desktop\DEVELOPEMENT\C#\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\Serie.json" />
+    <add key="jsonPathHeroSave" value="C:\Users\lbell\Desktop\DEVELOPEMENT\C#\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\HeroSave.json" />
+    <add key="jsonPathFilmSave" value="C:\Users\lbell\Desktop\DEVELOPEMENT\C#\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\FilmSave.json" />
+    <add key="jsonPathSerieSave" value="C:\Users\lbell\Desktop\DEVELOPEMENT\C#\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\SerieSave.json" />
     <add key="AffichePath" value="C:\Users\lbell\Desktop\DEVELOPEMENT\C#\marvelflow\src\MarvelFlow\MarvelFlow.App\Images\" />
-    <add key="TeaserPath" value="C:\Users\lbell\Desktop\DEVELOPEMENT\C#\marvelflow\src\MarvelFlow\MarvelFlow.App\Component\Teaser\" />
+    <add key="TeaserPath" value="C:\Users\lbell\Desktop\DEVELOPEMENT\C#\marvelflow\src\MarvelFlow\MarvelFlow.App\Component\" />
   </appSettings>
 </configuration>
