--- a/src/MarvelFlow/MarvelFlow.App/App.config
+++ b/src/MarvelFlow/MarvelFlow.App/App.config
@@ -1,18 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="jsonPathHero" value="C:\Users\AM\Documents\GIT\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\Hero.json" />
-    <add key="jsonPathFilm" value="C:\Users\AM\Documents\GIT\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\Film.json" />
-    <add key="jsonPathSerie" value="C:\Users\AM\Documents\GIT\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\Serie.json" />
-    <add key="jsonPathHeroSave" value="C:\Users\AM\Documents\GIT\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\HeroSave.json" />
-    <add key="jsonPathFilmSave" value="C:\Users\AM\Documents\GIT\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\FilmSave.json" />
-    <add key="jsonPathSerieSave" value="C:\Users\AM\Documents\GIT\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\SerieSave.json" />
-    <add key="AffichePath" value="C:\Users\AM\Documents\GIT\marvelflow\src\MarvelFlow\MarvelFlow.App\Images\" />
-    <add key="TeaserPath" value="C:\Users\AM\Documents\GIT\marvelflow\src\MarvelFlow\MarvelFlow.App\Component\" />
+    <add key="jsonPathHero" value="C:\Users\User\Documents\GIT\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\Hero.json" />
+    <add key="jsonPathFilm" value="C:\Users\User\Documents\GIT\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\Film.json" />
+    <add key="jsonPathSerie" value="C:\Users\User\Documents\GIT\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\Serie.json" />
+    <add key="jsonPathHeroSave" value="C:\Users\User\Documents\GIT\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\HeroSave.json" />
+    <add key="jsonPathFilmSave" value="C:\Users\User\Documents\GIT\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\FilmSave.json" />
+    <add key="jsonPathSerieSave" value="C:\Users\User\Documents\GIT\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\SerieSave.json" />
+    <add key="AffichePath" value="C:\Users\User\Documents\GIT\marvelflow\src\MarvelFlow\MarvelFlow.App\Images\" />
+    <add key="TeaserPath" value="C:\Users\User\Documents\GIT\marvelflow\src\MarvelFlow\MarvelFlow.App\Component\" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -21,4 +22,16 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
