Design combo box +preparation CurrentUse

--- a/src/MarvelFlow/MarvelFlow.App/App.config
+++ b/src/MarvelFlow/MarvelFlow.App/App.config
@@ -10,6 +10,11 @@
     <add key="AffichePath" value="C:\Users\lbell\Desktop\DEVELOPEMENT\C#\marvelflow\src\MarvelFlow\MarvelFlow.App\Images\" />
     <add key="TeaserPath" value="C:\Users\lbell\Desktop\DEVELOPEMENT\C#\marvelflow\src\MarvelFlow\MarvelFlow.App\Component\" />
   </appSettings>
+  <connectionStrings>
+    <add name="MarvelFlowDB"
+        connectionString="Data Source=MSI\SQLEXPRESS; Initial Catalog=MarvelFlow;Integrated Security=True"
+        providerName="System.Data.SqlClient" />
+  </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
