Checkers Inscription/Connexion
+ fix history when connexion 
+ deconnexion link
TODO: DB Call forchecker + inscription + connexion

--- a/src/MarvelFlow/MarvelFlow.App/MarvelFlow.App.csproj
+++ b/src/MarvelFlow/MarvelFlow.App/MarvelFlow.App.csproj
@@ -98,7 +98,7 @@
     </ApplicationDefinition>
     <Compile Include="Lib\CurrentUserHandler.cs" />
     <Compile Include="Lib\Messages\AdminMessage.cs" />
-    <Compile Include="Lib\Util.cs" />
+    <Compile Include="Lib\AppUtils.cs" />
     <Compile Include="Lib\HistoryObject.cs" />
     <Compile Include="Lib\Messages\ListMovieMessage.cs" />
     <Compile Include="Lib\Messages\MovieMessage.cs" />
